--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:js": "rollup -c",
     "build:css": "sass src/scss:public/css",
     "watch:css": "sass --watch src/scss:public/css",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/pg": "^8.15.5"
+    "@types/pg": "^8.15.5",
+    "vitest": "^3.2.4"
   }
 }
